# django-redirects

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: create-release.yml  test-package.yml
redirects/: __init__.py  admin.py  apps.py  http.py  metadata.py  middleware.py  models.py
redirects/locale/en/LC_MESSAGES/: django.mo  django.po
redirects/locale/it/LC_MESSAGES/: django.mo  django.po
redirects/locale/ru/LC_MESSAGES/: django.mo  django.po
redirects/migrations/: 0001_initial.py  0002_add_priority.py  0003_redirect_created_at_redirect_updated_at.py  0004_alter_redirect_new_path_alter_redirect_old_path.py  0005_redirect_note.py
tests/: __init__.py  settings.py  test.py  test_admin.py  test_metadata.py  test_models.py  urls.py
