[metadata]
name = django-redirects
version = 0.4.0
author = Fabio Caccamo
author_email = fabio.caccamo@gmail.com
description = django redirects as they should be, with full control.
keywords =
    django
    admin
    redirects
    redirect
    permanent
    temporary
    301
    302
    303
    307
    308
    exact
    prefix
    regex
url = https://github.com/fabiocaccamo/django-redirects
download_url = https://github.com/fabiocaccamo/django-redirects/archive/0.4.0.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
requires = django (>= 2.2)
project_urls =
    Documentation = https://github.com/fabiocaccamo/django-redirects#readme
    Issues = https://github.com/fabiocaccamo/django-redirects/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
include_package_data = True

[options.packages.find]
exclude = contrib; docs; tests*
